# Physical-AI-Humanoid-Robotics-Textbook-

./: DEPLOYMENT.md  Dockerfile  LAUNCH-CHECKLIST.md  build-backend.sh  build-frontend.sh  deployment-plan.md  docker-compose.yml  health-check.py  railway-config.md
.github/workflows/: deploy-frontend.yml  deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: exceptions.py  logging_config.py  main.py
backend/src/api/: rag.py  textbook.py  user_preferences.py
backend/src/config/: settings.py
backend/src/db/: session.py
backend/src/models/: database.py
backend/src/monitoring/: api_monitor.py
backend/src/qdrant/: client.py
backend/src/schemas/: __init__.py
backend/src/scripts/: generate_textbook.py
backend/src/services/: chapter_service.py  rag_service.py  textbook_service.py  user_preference_service.py
backend/tests/: test_api_integration.py  test_rag_service.py  test_textbook_service.py
docs/: basics.md  capstone.md  intro.md  ros2.md  simulation.md  vla.md
frontend/: .env.example  .eslintrc.json  Dockerfile  docusaurus.config.js  nginx.conf  package-lock.json  package.json  sidebars.js
frontend/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
frontend/docs/: basics.md  capstone.md  intro.md  ros2.md  simulation.md  vla.md
frontend/static/: .gitkeep
specs/001-textbook-generation/: spec.md
specs/002-textbook-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+25 files in other folders)
