[project]
name = "textbook-generation-backend"
version = "0.1.0"
description = "Backend API for AI-Native Textbook with RAG Chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.7.0",
    "langchain>=0.0.339",
    "langchain-community>=0.0.38",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0"
]

[tool.black]
line-length = 88
skip-string-normalization = true